aligned texts and fixed formatting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,20 +4,30 @@
 }
 
 nav {
-    padding: 0;
-    margin: 0;
     width: 100%;
-    height: 10%;
-    background-color: aqua;
+    background-color: rgb(0, 189, 189);
+    margin-bottom: 15px;
 }
 
 section {
-    width: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
+}
+
+footer {
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
 }
 
 a {
     text-decoration: none;
-    color: #FDF8F5;
+    color: #333333;
+}
+
+ul {
+    padding: 25px;
 }
 
 li {
@@ -31,4 +41,8 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.hero {
+    text-align: center;
 }
